Split supplier prices by package variation